--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://hub:hub@localhost:5432/hub?schema=public"
+JWT_SECRET="mySecretKey"
