Criação de tarefas e dockerizando a aplicação

--- a/docker/postgresql/Dockerfile
+++ b/docker/postgresql/Dockerfile
@@ -1,5 +1,5 @@
-FROM postgres:lates
+FROM postgres:latest
 ENV POSTGRES_PASSWORD=root
-ENV POSTGRES_USER=weex
-ENV POSTGRES_DB=weex
+ENV POSTGRES_USER=hub
+ENV POSTGRES_DB=hub
 COPY scripts/* /docker-entrypoint-initdb.d/
