--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:18
 WORKDIR /app
-COPY package*.json ./
-RUN npm ci
-COPY . .
-RUN npm install -g prisma
+COPY ./* ./
+RUN npm install
+RUN npm run clean
+RUN npm run build
 EXPOSE 5000
+CMD [ "node", "dist/main.js" ]
